--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Lobo - Desenvolvedor e UX/UI Designer</title>
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
